Added more contents

--- a/04-Kubernetes-Fundamentals-with-YAML/04-02-PODs-with-YAML/kube-manifests/01-kube-base-definition.yml
+++ b/04-Kubernetes-Fundamentals-with-YAML/04-02-PODs-with-YAML/kube-manifests/01-kube-base-definition.yml
@@ -1,7 +1,10 @@
 apiVersion: 
 kind: 
 metadata:
-
+    name: ':::no-loc text="":::'
+    labels: ':::no-loc text=""::: <mandatory for Pods>'
+    namespace: 'default / :::no-loc text="":::'
+    app: ':::no-loc text=""::: <mandatory for deployments>'
 spec:
     
 # Types of Kubernetes Objects
